Got /Jokes to show error page by creating Jokes CRUD folder scaffolding in Pages/ instead of Views/ based on https://learn.microsoft.com/en-us/aspnet/core/tutorials/razor-pages/model?view=aspnetcore-7.0&tabs=visual-studio

--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This page is running on your local server and is under construction as of @ViewData["Timestamp"]</p>
