Remove search page and replace it with a search box on main joke page. Add in Creator field for jokes.

--- a/Pages/Jokes/Index.cshtml
+++ b/Pages/Jokes/Index.cshtml
@@ -5,11 +5,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Jokes</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form>
+    <p>
+        Question: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -18,6 +26,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Joke[0].JokeAnswer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Joke[0].Creator)
             </th>
             <th></th>
         </tr>
@@ -30,6 +41,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.JokeAnswer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Creator)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
