--- a/Pages/Jokes/Details.cshtml
+++ b/Pages/Jokes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model JokesWebApp.Pages.Jokes.DetailsModel
 
 @{
@@ -22,6 +22,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Joke.JokeAnswer)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Joke.Creator)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Joke.Creator)
         </dd>
     </dl>
 </div>
